fix: bubblechart title invisible

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import 'swiper/css';
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
 
 /* Custom theme configuration for Tailwind v4 */
 @theme {
@@ -12,7 +14,7 @@
   --color-warning: rgba(255, 149, 5, 1);
   --color-info: rgba(71, 0, 36, 1);
   --color-background: rgba(255, 255, 255, 1);
-  
+
   /* Font family */
   --font-mono: 'JetBrains Mono', monospace;
 
@@ -364,6 +366,14 @@ svg#teck-stack-svg .legend-size .swatch {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.circle-overlay__title {
+  font-size: 14px;
+}
+
+.circle-overlay__body {
+  font-size: 12px;
 }
 
 .modal .close {
